--- a/Hit_Me/Block.xaml
+++ b/Hit_Me/Block.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Hit_Me.Hit_Me"
+﻿<UserControl x:Class="Hit_Me.Block"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
