--- a/Hit_Me/MainWindow.xaml
+++ b/Hit_Me/MainWindow.xaml
@@ -5,27 +5,13 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Hit_Me"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
+        Title="MainWindow"
+        MinHeight="800" MinWidth="800">
     <Grid x:Name="LayoutRoot">
         <Grid.ColumnDefinitions>
             <ColumnDefinition></ColumnDefinition>
-            <ColumnDefinition Width="280"></ColumnDefinition>
+            <ColumnDefinition></ColumnDefinition>
         </Grid.ColumnDefinitions>
-
-
-        <Border Grid.Column="1" BorderBrush="SteelBlue" BorderThickness="1" Margin="5">
-            <Grid>
-                <Canvas x:Name="canvasBackground" SizeChanged="canvasBackground_SizeChanged" MinWidth="50">
-                    <Canvas.Background>
-                        <RadialGradientBrush>
-                            <GradientStop Color="AliceBlue" Offset="0"></GradientStop>
-                            <GradientStop Color="White" Offset="0.7"></GradientStop>
-                        </RadialGradientBrush>
-                    </Canvas.Background>
-                </Canvas>
-            </Grid>
-        </Border>
-
         <Border Grid.Column="0" BorderBrush="SteelBlue" BorderThickness="1" Margin="5">
             <Border.Background>
                 <RadialGradientBrush GradientOrigin="1,0.7" Center="1,0.7" RadiusX="1" RadiusY="1">
@@ -34,16 +20,25 @@
                 </RadialGradientBrush>
             </Border.Background>
             <StackPanel Margin="15" VerticalAlignment="Center" HorizontalAlignment="Center">
-                <TextBlock FontFamily="Impact" FontSize="35" Foreground="LightSteelBlue">Hit Me</TextBlock>
-                <TextBlock x:Name="lblRate" Margin="0,30,0,0" TextWrapping="Wrap" FontFamily="Georgia" FontSize="14"></TextBlock>
-                <TextBlock x:Name="lblSpeed" Margin="0,30" TextWrapping="Wrap" FontFamily="Georgia" FontSize="14"></TextBlock>
+                <TextBlock HorizontalAlignment="Center" Margin="20" FontFamily="Impact" FontSize="35" Foreground="LightSteelBlue">Hit Me</TextBlock>
+                <TextBlock x:Name="lblRate" TextWrapping="Wrap" FontFamily="Georgia" FontSize="14"></TextBlock>
+                <TextBlock x:Name="lblSpeed" TextWrapping="Wrap" FontFamily="Georgia" FontSize="14"></TextBlock>
                 <TextBlock x:Name="lblStatus" 
 			 TextWrapping="Wrap" FontFamily="Georgia" FontSize="20">Hit Me is not started yet.</TextBlock>
-                <Button x:Name="cmdStart" Padding="5" Margin="0,30" Width="80" Content="Start Game" Click="cmdStart_Click"></Button>
+                <Button x:Name="cmdStart" Padding="5" Margin="10" Width="80" Content="Start Game" Click="cmdStart_Click"></Button>
             </StackPanel>
-
+        </Border>
+        <Border Grid.Column="1" BorderBrush="SteelBlue" BorderThickness="1" Margin="5">
+            <Grid>
+                <Canvas x:Name="canvasBackground" SizeChanged="canvasBackground_SizeChanged" MinWidth="50">
+                    <Canvas.Background>
+                        <RadialGradientBrush>
+                            <GradientStop Color="Red" Offset="0"></GradientStop>
+                            <GradientStop Color="Gold" Offset="0.7"></GradientStop>
+                        </RadialGradientBrush>
+                    </Canvas.Background>
+                </Canvas>
+            </Grid>
         </Border>
     </Grid>
-
-
 </Window>
